--- a/eda/proteins_analysis.ipynb
+++ b/eda/proteins_analysis.ipynb
@@ -382,28 +382,43 @@
     "    analysis = ProteinAnalysis(seq)\n",
     "    features = {}\n",
     "    \n",
+    "    # The following are Basic Features\n",
     "    features['length'] = len(seq)\n",
     "    features['mw'] = analysis.molecular_weight()\n",
     "    features['aromaticity'] = analysis.aromaticity()\n",
     "    features['instability_index'] = analysis.instability_index()\n",
-    "    features['isoelectric_point'] = analysis.isoelectric_point()\n",
-    "    \n",
-    "    # Amino acid composition (percentage for each of the 20 amino acids)\n",
-    "    aa_comp = analysis.get_amino_acids_percent()\n",
-    "    for aa, perc in aa_comp.items():\n",
-    "        features[f'aa_{aa}'] = perc\n",
     "\n",
-    "    features['aromatic_binding_score'] = aa_comp.get('F', 0) + aa_comp.get('Y', 0) + aa_comp.get('W', 0)\n",
+    "    features['net_charge_pH7'] = analysis.charge_at_pH(7.0)\n",
+    "\n",
+    "    aa_percent = analysis.get_amino_acids_percent()\n",
+    "    \n",
+    "    for aa in ['N', 'Q', 'S', 'T', 'K', 'R', 'D', 'E']:\n",
+    "        features[f'frac_{aa}'] = aa_percent.get(aa, 0.0)\n",
+    "\n",
+    "   \n",
+    "    for aa in ['F', 'Y', 'W']:\n",
+    "        features[f'frac_{aa}'] = aa_percent.get(aa, 0.0)\n",
+    "        features['aromatic_binding_score'] = (\n",
+    "        aa_percent.get('F', 0.0) +\n",
+    "        aa_percent.get('Y', 0.0) +\n",
+    "        aa_percent.get('W', 0.0)\n",
+    "    )\n",
+    "\n",
+    "    features['aromaticity'] = analysis.aromaticity()\n",
     "\n",
     "    hydrophobicity_values = {\n",
-    "        'A': 1.8, 'C': 2.5, 'D': -3.5, 'E': -3.5, 'F': 2.8,\n",
-    "        'G': -0.4, 'H': -3.2, 'I': 4.5, 'K': -3.9, 'L': 3.8,\n",
-    "        'M': 1.9, 'N': -3.5, 'P': -1.6, 'Q': -3.5, 'R': -4.5,\n",
-    "        'S': -0.8, 'T': -0.7, 'V': 4.2, 'W': -0.9, 'Y': -1.3\n",
+    "        'A': 1.8,  'C': 2.5,  'D': -3.5, 'E': -3.5,\n",
+    "        'F': 2.8,  'G': -0.4, 'H': -3.2, 'I': 4.5,\n",
+    "        'K': -3.9, 'L': 3.8,  'M': 1.9,  'N': -3.5,\n",
+    "        'P': -1.6, 'Q': -3.5, 'R': -4.5, 'S': -0.8,\n",
+    "        'T': -0.7, 'V': 4.2,  'W': -0.9, 'Y': -1.3\n",
     "    }\n",
-    "    hydro_score = np.mean([hydrophobicity_values.get(aa, 0) for aa in seq])\n",
-    "    features['avg_hydrophobicity'] = hydro_score\n",
-    "    \n",
+    "    if len(seq) > 0:\n",
+    "        hydro_scores = [hydrophobicity_values.get(res, 0.0) for res in seq]\n",
+    "        features['avg_hydrophobicity'] = np.mean(hydro_scores)\n",
+    "    else:\n",
+    "        features['avg_hydrophobicity'] = 0.0\n",
+    "\n",
     "    return features\n",
     "\n",
     "feature_dicts = proteins['Amino Acid Sequence'].apply(compute_protein_features)\n",
