Change Desc of features we're extracting

--- a/eda/proteins_analysis.ipynb
+++ b/eda/proteins_analysis.ipynb
@@ -131,21 +131,17 @@
    "id": "85a9e048",
    "metadata": {},
    "source": [
-    "## Compute Protein Features\n",
+    "### Glycan–Protein Interaction Feature Extraction\n",
     "\n",
-    "I am not a Chemist. I do not know what features make a protein and glycan more likely to bind. In turn, I asked ChatGPT what descriptors can we use to describe the closeness of various proteins?:\n",
+    "This function extracts features that capture key dimensions of protein sequences relevant to glycan binding. It includes:\n",
     "\n",
-    "- **Length:** The total number of amino acids.\n",
-    "- **Molecular Weight:** Calculated from the amino acid composition.\n",
-    "- **Isoelectric Point (pI):** The pH at which the protein has no net charge.\n",
-    "- **Aromaticity:** The relative frequency of aromatic amino acids.\n",
-    "- **Instability Index:** A measure of the stability of the protein.\n",
-    "- **Amino Acid Composition:** The percent composition for each of the 20 amino acids.\n",
-    "- **Aromatic Binding Score:** A custom metric calculated as the sum of the percentages of aromatic amino acids (Phenylalanine, Tyrosine, Tryptophan) that are often important in binding interactions.\n",
-    "- **Average Hydrophobicity:** The mean hydrophobicity of the protein, computed over the entire sequence to indicate its overall hydrophobic or hydrophilic character.\n",
+    "- **Overall size and stability**: Length, molecular weight, and instability index.  \n",
+    "- **Charge properties**: Isoelectric point and net charge at pH 7, essential for electrostatic interactions with charged glycans.  \n",
+    "- **Polar/hydrogen-bonding residues**: Fractions of N, Q, S, T, K, R, D, E—critical for forming hydrogen bonds with sugar groups.  \n",
+    "- **Aromatic residues**: Fractions of F, Y, W, plus an aromatic binding score that sums these fractions, reflecting the potential for CH–π interactions.  \n",
+    "- **Hydrophobicity**: An average Kyte-Doolittle score to show how hydrophobic or hydrophilic the sequence is overall.\n",
     "\n",
-    "\n",
-    "We can use these features to form the feature vector for each protein.\n"
+    "Together, these features capture multiple facets—charge, polar binding potential, aromatic stacking ability, and structural characteristics—giving us a broad view of each protein’s capacity for glycan interaction."
    ]
   },
   {
