--- a/eda/proteins_analysis.ipynb
+++ b/eda/proteins_analysis.ipynb
@@ -381,17 +381,21 @@
     "    # The following are Basic Features\n",
     "    features['length'] = len(seq)\n",
     "    features['mw'] = analysis.molecular_weight()\n",
-    "    features['aromaticity'] = analysis.aromaticity()\n",
     "    features['instability_index'] = analysis.instability_index()\n",
     "\n",
     "    features['net_charge_pH7'] = analysis.charge_at_pH(7.0)\n",
     "\n",
     "    aa_percent = analysis.get_amino_acids_percent()\n",
-    "    \n",
+    "\n",
+    "    # Prompted ChatGPT to ask how to parse a\n",
+    "    # N, Q, S, T: Polar Amino Acids, often involved in hydrogen bonding with glycans\n",
+    "    # K, R: Basic Amino Acids, can form hydrogen bonds and electrostatic bonds\n",
+    "    # D, E: Acidic Amino Acids, can interact with positively charged groups of glycans\n",
     "    for aa in ['N', 'Q', 'S', 'T', 'K', 'R', 'D', 'E']:\n",
     "        features[f'frac_{aa}'] = aa_percent.get(aa, 0.0)\n",
     "\n",
     "   \n",
+    "   # F, Y, W are aromatic amino acids which bind with glycans\n",
     "    for aa in ['F', 'Y', 'W']:\n",
     "        features[f'frac_{aa}'] = aa_percent.get(aa, 0.0)\n",
     "        features['aromatic_binding_score'] = (\n",
@@ -402,21 +406,11 @@
     "\n",
     "    features['aromaticity'] = analysis.aromaticity()\n",
     "\n",
-    "    hydrophobicity_values = {\n",
-    "        'A': 1.8,  'C': 2.5,  'D': -3.5, 'E': -3.5,\n",
-    "        'F': 2.8,  'G': -0.4, 'H': -3.2, 'I': 4.5,\n",
-    "        'K': -3.9, 'L': 3.8,  'M': 1.9,  'N': -3.5,\n",
-    "        'P': -1.6, 'Q': -3.5, 'R': -4.5, 'S': -0.8,\n",
-    "        'T': -0.7, 'V': 4.2,  'W': -0.9, 'Y': -1.3\n",
-    "    }\n",
-    "    if len(seq) > 0:\n",
-    "        hydro_scores = [hydrophobicity_values.get(res, 0.0) for res in seq]\n",
-    "        features['avg_hydrophobicity'] = np.mean(hydro_scores)\n",
-    "    else:\n",
-    "        features['avg_hydrophobicity'] = 0.0\n",
+    "    features['hydrophobicity'] = analysis.gravy()\n",
     "\n",
     "    return features\n",
     "\n",
+    "# Prompted ChatGPT how to parse the result of compute protein features\n",
     "feature_dicts = proteins['Amino Acid Sequence'].apply(compute_protein_features)\n",
     "features_df = pd.DataFrame(list(feature_dicts))\n",
     "\n",
@@ -458,9 +452,6 @@
     "# Select the feature columns (all columns from the feature extraction)\n",
     "feature_columns = features_df.columns.tolist()\n",
     "feature_data = proteins[feature_columns].values\n",
-    "\n",
-    "# comput dist\n",
-    "dist_matrix = squareform(pdist(feature_data, metric='euclidean'))\n",
     "\n",
     "# apply k means clustering\n",
     "n_clusters = 3\n",
