--- a/eda/proteins_analysis.ipynb
+++ b/eda/proteins_analysis.ipynb
@@ -495,6 +495,7 @@
     "pca_components = pca.fit_transform(feature_data)\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
+    "# Visualize protein clusters in 2D PCA space: x=PCA1, y=PCA2, colors=clusters, \n",
     "scatter = plt.scatter(pca_components[:, 0], pca_components[:, 1], \n",
     "                      c=proteins['cluster_label'], cmap='viridis', s=100, edgecolor='k')\n",
     "plt.title('PCA of Protein Feature Vectors')\n",
