--- a/eda/and_vs_or_strat.ipynb
+++ b/eda/and_vs_or_strat.ipynb
@@ -219,22 +219,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9209316930839776"
+       "np.float64(4.435205128148839e-06)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max(list(fractions_df['f']))"
+    "np.median(list(fractions_df['f']))"
    ]
   },
   {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
