--- a/eda/and_vs_or_strat.ipynb
+++ b/eda/and_vs_or_strat.ipynb
@@ -17,6 +17,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.nn import GCNConv, global_mean_pool\n",
+    "from torch_geometric.data import Data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [],
