Fix Protein detailr and reorganize files

--- a/data_cleaning/glycan_detailer.ipynb
+++ b/data_cleaning/glycan_detailer.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -436,13 +436,13 @@
     "glycans_detailed = detail_glycans(glycans)\n",
     "\n",
     "# Save the enhanced dataset if desired\n",
-    "glycans_detailed.to_csv('../data/glycans_detailed.csv', index=False)"
+    "glycans_detailed.to_csv('detailed_glycans.csv', index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "glycan-env",
+   "display_name": "test_env",
    "language": "python",
    "name": "python3"
   },
@@ -456,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
