Reorgranized the feature_importance folder

--- a/eda/feature_importance/detailers/dataset_merger.ipynb
+++ b/eda/feature_importance/detailers/dataset_merger.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
       "One-hot encoding Protein_PredictedProteinClass with 7 unique values\n",
       "One-hot encoding added 223 new features\n",
       "\n",
-      "Saving gold dataset to gold_data_train.csv...\n",
+      "Saving gold dataset to ..\\data\\gold_data_train.csv...\n",
       "Gold dataset saved with 68492 records and 357 columns\n"
      ]
     }
@@ -221,7 +221,7 @@
     "glycans_file = \"detailed_glycans.csv\"  \n",
     "proteins_file = \"detailed_proteins.csv\"  \n",
     "train_fractions_file = \"Train_Fractions.csv\"\n",
-    "output_file = \"gold_data_train.csv\"\n",
+    "output_file = os.path.join(\"..\", \"data\", \"gold_data_train.csv\")\n",
     "\n",
     "# Create the gold dataset\n",
     "gold_data_train = create_gold_dataset(glycans_file, proteins_file, train_fractions_file, output_file)\n"
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
       "One-hot encoding Protein_PredictedProteinClass with 5 unique values\n",
       "One-hot encoding added 99 new features\n",
       "\n",
-      "Saving gold dataset to gold_data_test.csv...\n",
+      "Saving gold dataset to ..\\data\\gold_data_test.csv...\n",
       "Gold dataset saved with 9472 records and 233 columns\n"
      ]
     }
@@ -272,15 +272,14 @@
     "glycans_file = \"detailed_glycans.csv\"  \n",
     "proteins_file = \"detailed_proteins.csv\"  \n",
     "test_fractions_file = \"Test_Fractions.csv\"\n",
-    "output_file = \"gold_data_test.csv\"\n",
-    "\n",
+    "output_file = os.path.join(\"..\", \"data\", \"gold_data_test.csv\")\n",
     "# Create the gold dataset\n",
     "gold_data_test = create_gold_dataset(glycans_file, proteins_file, test_fractions_file, output_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +756,7 @@
        "[68492 rows x 357 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,28 +767,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'gold_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m gold_data\u001b[38;5;241m.\u001b[39mshape\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'gold_data' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "(68492, 357)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "gold_data.shape"
+    "gold_data_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -798,17 +796,17 @@
        "{}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Select categorical columns\n",
-    "categorical_columns = gold_data.select_dtypes(include=['object']).columns\n",
+    "categorical_columns = gold_data_train.select_dtypes(include=['object']).columns\n",
     "\n",
     "# Get the number of unique values for each categorical column\n",
-    "unique_values = {col: gold_data[col].nunique() for col in categorical_columns}\n",
+    "unique_values = {col: gold_data_train[col].nunique() for col in categorical_columns}\n",
     "\n",
     "# Display the result\n",
     "unique_values"
@@ -816,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -825,17 +823,17 @@
        "{}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Select numerical columns\n",
-    "numerical_columns = gold_data.select_dtypes(include=['number']).columns\n",
+    "numerical_columns = gold_data_train.select_dtypes(include=['number']).columns\n",
     "\n",
     "# Get the number of unique values for each numerical column\n",
-    "unique_values_numerical = {col: gold_data[col].nunique() for col in numerical_columns}\n",
+    "unique_values_numerical = {col: gold_data_train[col].nunique() for col in numerical_columns}\n",
     "\n",
     "# Display the result\n",
     "{col: count for col, count in unique_values_numerical.items() if count == 1}"
@@ -843,12 +841,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get value counts for each categorical column with less than 100 unique values\n",
-    "value_counts = {col: gold_data[col].value_counts() for col in categorical_columns if unique_values[col] < 100}\n",
+    "value_counts = {col: gold_data_train[col].value_counts() for col in categorical_columns if unique_values[col] < 100}\n",
     "\n",
     "# Display the result\n",
     "for col, counts in value_counts.items():\n",
