glycanML conversion and sweettalk training

--- a/eda/sweet_talk_explore.ipynb
+++ b/eda/sweet_talk_explore.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +53,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_iupac(glycans):\n",
+    "    converted = []\n",
+    "    \n",
+    "    for glycan in glycans:\n",
+    "       \n",
+    "        glycan = glycan.replace('α', 'a').replace('β', 'b')\n",
+    "        \n",
+    "        # remove number before any os and op\n",
+    "        glycan = re.sub(r'(\\D+)\\d+OS', r'\\1OS', glycan)\n",
+    "        glycan = re.sub(r'(\\D+)\\d+OP', r'\\1OP', glycan)\n",
+    "        \n",
+    "        # remove final anomeric state and spacer     str.rsplit('(', 1)[0]\n",
+    "        glycan = glycan.rsplit('(', 1)[0]\n",
+    "        \n",
+    "        converted.append(glycan)\n",
+    "    \n",
+    "    return converted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "converted_glycans = convert_iupac(our_glycan_iupacs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "611\n",
+      "len of allset: 13541, len of our set: 523, amount in our set that isnt in all set: 367\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_set = set(df_all)\n",
+    "our_set = set(converted_glycans)\n",
+    "\n",
+    "print(len(converted_glycans))\n",
+    "print(f'len of allset: {len(all_set)}, len of our set: {len(our_set)}, amount in our set that isnt in all set: {len(our_set - all_set)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combine sweettalk dataset with our glycans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len df all: 21296, len unique df all 13541, len unique our glycans: 523\n",
+      "len combined with oiurs 14064\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "unique_df_all = list(set(df_all))\n",
+    "unique_our_glycans = list(set(converted_glycans))\n",
+    "print(f'len df all: {len(df_all)}, len unique df all {len(unique_df_all)}, len unique our glycans: {len(unique_our_glycans)}')\n",
+    "combined_with_ours = unique_df_all.copy()\n",
+    "combined_with_ours += unique_our_glycans\n",
+    "print('len combined with oiurs', len(combined_with_ours))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open('combined_with_ours.csv', mode='w', newline='', encoding='utf-8') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow([\"target\"])  # Write the header\n",
+    "    for iupac in combined_with_ours:\n",
+    "        writer.writerow([iupac])  # Write each IUPAC name as a new row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +228,7 @@
        "  ['Gal', 'b1-3', 'NeuNAc', 'a2-6', 'GalNAc']]]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +252,7 @@
        " ['Man', 'a1-3', 'Man', 'a1-2', 'Man']]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,14 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +291,7 @@
        " '2,3-Anhydro-All']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
