sheldons binding db notebook from his branch

--- a/multitask_training/multitask_tr.ipynb
+++ b/multitask_training/multitask_tr.ipynb
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,6 @@
    ],
    "source": [
     "\n",
-    "    \n",
     "\n",
     "fractions_df = pd.read_csv('../pipeline/data/Train_Fractions.csv', sep='\\t')\n",
     "glycans_df = pd.read_csv('../pipeline/data/Glycan-Structures-CFG611.txt', sep='\\t')\n",
@@ -1333,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1681,8 +1680,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training: 100%|██████████| 5899/5899 [01:41<00:00, 58.18it/s, glyML_loss=0.6733, task469_loss=0.0134] \n",
-      "Validating: 100%|██████████| 252/252 [00:01<00:00, 188.88it/s, loss=0.0069]\n"
+      "Training: 100%|██████████| 5899/5899 [01:44<00:00, 56.40it/s, glyML_loss=0.2136, task469_loss=0.0136] \n",
+      "Validating: 100%|██████████| 252/252 [00:01<00:00, 191.14it/s, loss=0.0010]\n"
      ]
     },
     {
@@ -1690,11 +1689,11 @@
      "output_type": "stream",
      "text": [
       "Training Results:\n",
-      "  glyML: mse: 0.7382, pearson: 0.0182, loss: 4354.5588\n",
-      "  task469: mse: 0.0106, pearson: 0.0279, loss: 62.7439\n",
+      "  glyML: mse: 0.7369, pearson: 0.0194, loss: 4347.1236\n",
+      "  task469: mse: 0.0103, pearson: 0.0335, loss: 120.8777\n",
       "\n",
       "\n",
-      "{'mse': 0.004806539509445429, 'pearson': 0.07678210735321045, 'loss': 1.2118915317114443}\n",
+      "{'mse': 0.0048799351789057255, 'pearson': 0.06330111622810364, 'loss': 2.456764522474259}\n",
       "Epoch 2/3\n"
      ]
     },
@@ -1702,8 +1701,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training: 100%|██████████| 5899/5899 [01:38<00:00, 59.74it/s, glyML_loss=0.2649, task469_loss=0.0147] \n",
-      "Validating: 100%|██████████| 252/252 [00:01<00:00, 204.87it/s, loss=0.0018]\n"
+      "Training: 100%|██████████| 5899/5899 [01:44<00:00, 56.28it/s, glyML_loss=0.3627, task469_loss=0.0093] \n",
+      "Validating: 100%|██████████| 252/252 [00:01<00:00, 166.40it/s, loss=0.0176]\n"
      ]
     },
     {
@@ -1711,11 +1710,11 @@
      "output_type": "stream",
      "text": [
       "Training Results:\n",
-      "  glyML: mse: 0.7257, pearson: 0.0672, loss: 4281.0098\n",
-      "  task469: mse: 0.0065, pearson: 0.1048, loss: 38.3662\n",
+      "  glyML: mse: 0.7257, pearson: 0.0659, loss: 4281.0088\n",
+      "  task469: mse: 0.0063, pearson: 0.1750, loss: 74.8571\n",
       "\n",
       "\n",
-      "{'mse': 0.0048169647343456745, 'pearson': 0.16498017311096191, 'loss': 1.212919050711207}\n",
+      "{'mse': 0.004984656814485788, 'pearson': 0.13918648660182953, 'loss': 2.5146435777423903}\n",
       "Epoch 3/3\n"
      ]
     },
@@ -1723,7 +1722,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  46%|████▋     | 2740/5899 [00:45<01:03, 49.42it/s, glyML_loss=2.5917, task469_loss=0.0052] "
+      "Training: 100%|██████████| 5899/5899 [01:51<00:00, 52.92it/s, glyML_loss=0.2716, task469_loss=0.0413] \n",
+      "Validating: 100%|██████████| 252/252 [00:01<00:00, 169.90it/s, loss=0.0063]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Results:\n",
+      "  glyML: mse: 0.7217, pearson: 0.0932, loss: 4257.2676\n",
+      "  task469: mse: 0.0060, pearson: 0.2584, loss: 70.9024\n",
+      "\n",
+      "\n",
+      "{'mse': 0.005015075672417879, 'pearson': 0.16086101531982422, 'loss': 2.5264363980386406}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
