--- a/multitask_training/multitask_tr.ipynb
+++ b/multitask_training/multitask_tr.ipynb
@@ -1564,7 +1564,7 @@
     "glyML_fractions_train_df = pd.read_csv('../pipeline/data/GlycanML/train_fractions.tsv', sep='\\t')\n",
     "glyML_fractions_test_df = pd.read_csv('../pipeline/data/GlycanML/test_fractions.tsv', sep='\\t')\n",
     "glyML_glycans_df = pd.read_csv('../pipeline/data/GlycanML/glycans.tsv', sep='\\t')\n",
-    "glyML_proteins_df = pd.read_csv('../pipeline/data/GlycanML/proteins.tsv', sep='\\t')\n",
+    "glyML_proteins_df = pd.read_csv('../pipeline/data/GlycanML/proteins.tsv', nrows=500, sep='\\t')\n",
     "\n",
     "glyML_glycan_mapping = {name: idx for idx, name in enumerate(glyML_glycans_df['Name'])}\n",
     "glyML_protein_mapping = {name: idx for idx, name in enumerate(glyML_proteins_df['ProteinGroup'])}\n",
@@ -1572,6 +1572,11 @@
     "# dont need this I dont think as not doing train-val split\n",
     "#train_data = fractions_df.loc[train_idx]\n",
     "#val_data = fractions_df.loc[val_idx]\n",
+    "##@ filtyer for GPU\n",
+    "glyML_fractions_train_df = glyML_fractions_train_df[\n",
+    "    (glyML_fractions_train_df['GlycanID'].isin(glyML_glycans_df['Name'])) &\n",
+    "    (glyML_fractions_train_df['ProteinGroup'].isin(glyML_proteins_df['ProteinGroup']))\n",
+    "]\n",
     "\n",
     "glyML_glycan_type = 'SMILES'\n",
     "\n",
