--- a/multitask_training/multitask_tr.ipynb
+++ b/multitask_training/multitask_tr.ipynb
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1363,10 @@
     "        #batch_data.to(device)\n",
     "        # Create a list of Data objects\n",
     "        data_list = []\n",
+    "        count = 0\n",
     "        for sequence in batch_data:\n",
+    "            count += 1\n",
+    "            print(f'encode batch progress: {count}/{len(batch_data)}')\n",
     "            # Don't use contact maps for now to avoid the error\n",
     "            #sequence = sequence.cuda()\n",
     "            data = self._sequence_to_graph(sequence, None).cuda()\n",
