glycan progress encoder

--- a/multitask_training/multitask_tr.ipynb
+++ b/multitask_training/multitask_tr.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,10 @@
     "        \"\"\"\n",
     "        # Create a list of Data objects\n",
     "        data_list = []\n",
+    "        count = 0\n",
     "        for sequence in batch_data:\n",
+    "            count += 1\n",
+    "            print(f'glycan encoder progress: {count}/{len(batch_data)}')\n",
     "            # Don't use contact maps for now to avoid the error\n",
     "            data = self._sequence_to_graph(sequence, None)\n",
     "            data_list.append(data)\n",
