oversample setting set

--- a/multitask_training/multitask_tr.ipynb
+++ b/multitask_training/multitask_tr.ipynb
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1874,7 +1874,7 @@
     "# handles batch interleaving to make sure we dont commit CATASTROPHIC FORGETTING\n",
     "train_loader = CombinedLoader(\n",
     "    {\"glyML\": glyML_train_loader, \"task469\": task469_train_loader, \"BindingDB\": BDB_train_loader},\n",
-    "    mode=\"min_size\"#\"max_size_cycle\"  # Oversample the smaller dataset  # \"min_size\"\n",
+    "    mode=\"max_size_cycle\"  # Oversample the smaller dataset  # \"min_size\"\n",
     ")\n",
     "\n",
     "# Dont need batch interleaving for validation here as not training\n",
