progress update bar fix

--- a/multitask_training/multitask_tr.ipynb
+++ b/multitask_training/multitask_tr.ipynb
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,10 @@
     "        \"\"\"Convert a batch of SMILES strings to graph embeddings\"\"\"\n",
     "        # Process each molecule individually\n",
     "        batch_embeddings = []\n",
+    "        count = 0\n",
     "        for smiles in batch_data:\n",
+    "            count += 1\n",
+    "            print(f'glycan batch encoder progress: {count}/{len(batch_data)}')\n",
     "            embedding = self.encode_smiles(smiles, device)\n",
     "            batch_embeddings.append(embedding)\n",
     "        #for iupac in batch_data:\n",
@@ -917,7 +920,7 @@
     "        count = 0\n",
     "        for sequence in batch_data:\n",
     "            count += 1\n",
-    "            print(f'glycan encoder progress: {count}/{len(batch_data)}')\n",
+    "            print(f'protein encoder progress: {count}/{len(batch_data)}')\n",
     "            # Don't use contact maps for now to avoid the error\n",
     "            data = self._sequence_to_graph(sequence, None)\n",
     "            data_list.append(data)\n",
