--- a/multitask_training/multitask_tr.ipynb
+++ b/multitask_training/multitask_tr.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
     "    \n",
     "    return train_indices, test_indices\n",
     "\n",
-    "def batch_encode(encoder, data_list, device, batch_size=8):\n",
+    "def batch_encode(encoder, data_list, device, batch_size):\n",
     "    \"\"\"Process data in batches to avoid CUDA memory overflow\"\"\"\n",
     "    all_encodings = []\n",
     "    total_items = len(data_list)\n",
@@ -319,7 +319,7 @@
     "    # for each protein create a protein_encoding feature where we use protein_encoder to encode the aminoacids\n",
     "    #glycan_encodings = glycan_encoder.encode_batch(glycans_df[glycan_type].tolist(), device)\n",
     "    #protein_encodings = protein_encoder.encode_batch(proteins_df['Amino Acid Sequence'].tolist(), device)\n",
-    "    \n",
+    "\n",
     "    batch_size = 100  # Adjust based on your GPU memory\n",
     "\n",
     "    # Encode glycans in batches\n",
